--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jenkins-Assignment-5</title>
+    <title>Jenkins-Assignment-2</title>
     <style>
         body {
-            background-color: blanchedalmond;
+            background-color: rgb(172, 150, 196);
         }
     </style>
 </head>
 <body>
-    <h1>Jenkins-Assignment-5</h1>
+    <h1>Jenkins-Assignment-2</h1>
+    <h3><em>Author: </em>Naveen Dasapalli</h3>
 </body>
 </html>
